Fixing CTA Spacing on Mobile

--- a/css/style.css
+++ b/css/style.css
@@ -428,14 +428,13 @@ h3 {
 .cta {
     margin: 50px auto 50px;
     max-width: 70%;
-    height: 500px;
     background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(../images/banner2.jpg);
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
     border-radius: 10px;
     text-align: center;
-    padding: 500px;
+    padding: 100px;
 }
     .cta h1 {
         color: #fff;
